--- a/index.html
+++ b/index.html
@@ -6,18 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brice Sabuco CV</title>
     <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style/landing-page.css" />
+    <link rel="stylesheet" href="style/first-page.css" />
+    <script defer src="js/script.js"></script>
 </head>
 
 <body>
+    <span class="cursor"></span>
     <header>
         <h2>Portfolio</h2>
     </header>
     <main>
         <div class="landing">
-            <h1>Brice Sabuco<span class="writingAnim"></span></h1>
+            <h1 class="name">Brice Sabuco<span class="writingAnim"></span></h1>
             <img class="landingPink" alt="pinkRect.svg" src="assets/pinkRect.svg">
             <img class="landingBlue" alt="blueRect.svg" src="assets/blueRect.svg">
         </div>
+        <div class="first-page">
+            <div class="project-left">
+                Project left
+            </div>
+            <div class="project-right">
+                Project right
+            </div>
+        </div>
+        <footer>
+            &copy;Copyright Brice Sabuco 2022
+        </footer>
     </main>
 </body>
 
