--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brice Sabuco CV</title>
+    <title>Brice Sabuco Portfolio</title>
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet" href="style/landing-page.css" />
     <link rel="stylesheet" href="style/first-page.css" />
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <span class="cursor"></span>
+    <!-- <span class="cursor"></span> -->
     <header>
         <h2>Portfolio</h2>
     </header>
@@ -23,11 +23,38 @@
             <img class="landingBlue" alt="blueRect.svg" src="assets/blueRect.svg">
         </div>
         <div class="first-page">
-            <div class="project-left">
-                Project left
+            <img class="pinkRectBottom" alt="pinkRectBottom.svg" src="assets/pinkRectBottom.svg">
+            <div class="project project-left">
+                <h3>OffSide</h3>
+                <div class="project-content">
+                    <img alt="offside" src="assets/offside.png">
+                    <div class="project-informations">
+                        <p>OffSide is a project that was built with HTML/CSS, React.js and Node. It is a football
+                            dashboard with 5 different widgets using an API from api-football.com. The 6th widget Ballon
+                            d'Or was made with a custom
+                            API with MongoDB Atlas.</p>
+                        <div>
+                            <div>Github</div>
+                            <div>URL</div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="project-right">
-                Project right
+            <div class="project project-right">
+                <h3>FireCare</h3>
+                <div class="project-content">
+                    <div class="project-informations">
+                        <p>OffSide is a project that was built with HTML/CSS, React.js and Node. It is a football
+                            dashboard with 5 different widgets using an API from api-football.com. The 6th widget Ballon
+                            d'Or was made with a custom
+                            API with MongoDB Atlas.</p>
+                        <div>
+                            <div>Github</div>
+                            <div>URL</div>
+                        </div>
+                    </div>
+                    <img alt="offside" src="assets/offside.png">
+                </div>
             </div>
         </div>
         <footer>
