--- a/index.html
+++ b/index.html
@@ -25,41 +25,45 @@
         <div class="first-page">
             <img class="pinkRectBottom" alt="pinkRectBottom.svg" src="assets/pinkRectBottom.svg">
             <div class="project project-left">
-                <h3>OffSide</h3>
+                <h3>FireCare</h3>
                 <div class="project-content">
                     <img alt="offside" src="assets/offside.png">
                     <div class="project-informations">
-                        <p>OffSide is a project that was built with HTML/CSS, React.js and Node. It is a football
-                            dashboard with 5 different widgets using an API from api-football.com. The 6th widget Ballon
-                            d'Or was made with a custom
-                            API with MongoDB Atlas.</p>
+                        <p><span class="project-name">OffSide</span> is a website that was built with <span
+                                class="important-word">HTML/CSS</span>, <span class="important-word">React.js</span>,
+                            <span class="important-word">Node.js</span> and <span class="important-word">MongoDB
+                                Atlas</span>. It is a
+                            football
+                            dashboard with 5 different widgets using an API from api-football.com
+                        </p>
                         <div>
-                            <div>Github</div>
-                            <div>URL</div>
+                            <div><a target="_blank" href="https://github.com/8rice/PROJECT_WEB_OCRES">Github</a></div>
+                            <div><a target="_blank" href="https://offsidev1.netlify.app/">Website</a></div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="project project-right">
-                <h3>FireCare</h3>
+                <h3>OffSide</h3>
                 <div class="project-content">
                     <div class="project-informations">
-                        <p>OffSide is a project that was built with HTML/CSS, React.js and Node. It is a football
-                            dashboard with 5 different widgets using an API from api-football.com. The 6th widget Ballon
-                            d'Or was made with a custom
-                            API with MongoDB Atlas.</p>
+                        <p>OffSide is a project that was built with HTML/CSS, React.js, Node and MongoDB Atlas. It is a
+                            football
+                            dashboard with 5 different widgets using an API from api-football.com
+                        </p>
                         <div>
-                            <div>Github</div>
+                            <div><a target="_blank" href="https://github.com/8rice/PROJECT_WEB_OCRES">Github</a></div>
                             <div>URL</div>
                         </div>
                     </div>
                     <img alt="offside" src="assets/offside.png">
                 </div>
             </div>
+            <img class="blueRectSide" alt="blueRectSide.svg" src="assets/blueRectSide.svg">
         </div>
-        <footer>
+        <!-- <footer>
             &copy;Copyright Brice Sabuco 2022
-        </footer>
+        </footer> -->
     </main>
 </body>
 
