--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet" href="style/landing-page.css" />
     <link rel="stylesheet" href="style/first-page.css" />
+    <link rel="stylesheet" href="style/techs-page.css" />
     <script defer src="js/script.js"></script>
 </head>
 
 <body>
     <header>
         <h2>Portfolio</h2>
+        <h2 class="contact"><a href="#contact-page">Contact</a></h2>
     </header>
     <main>
         <div class="landing">
             <h1 class="name">Brice Sabuco<span class="writingAnim"></span></h1>
+            <p class="presentation-sentence">Student engineer, pursuing a degree in Computer Science. Passionated about
+                tech. Love to create and build.</p>
             <img class="landingPink" alt="pinkRect.svg" src="assets/pinkRect.svg">
             <img class="landingBlue" alt="blueRect.svg" src="assets/blueRect.svg">
         </div>
@@ -60,9 +64,61 @@
             </div>
             <img class="blueRectSide" alt="blueRectSide.svg" src="assets/blueRectSide.svg">
         </div>
-        <!-- <footer>
+        <div class="techs-page">
+            <h2>Commonly used</h2>
+            <div class="techs-list">
+                <div class="tech">
+                    <h3>HTML5</h3>
+                    <img alt="logo" src="assets/logos/html_5.svg">
+                </div>
+                <div class="tech">
+                    <h3>CSS3</h3>
+                    <img alt="logo" src="assets/logos/CSS3.svg">
+                </div>
+                <div class="tech">
+                    <h3>Javascript</h3>
+                    <img alt="logo" src="assets/logos/js.svg">
+                </div>
+                <div class="tech">
+                    <h3>React.js</h3>
+                    <img alt="logo" src="assets/logos/react.svg">
+                </div>
+                <div class="tech">
+                    <h3>Node Packet Manager</h3>
+                    <img alt="logo" src="assets/logos/npm.svg">
+                </div>
+                <div class="tech">
+                    <h3>Notion</h3>
+                    <img alt="logo" src="assets/logos/notion.svg">
+                </div>
+                <div class="tech">
+                    <h3>Figma</h3>
+                    <img alt="logo" src="assets/logos/figma.svg">
+                </div>
+                <div class="tech">
+                    <h3>VS Code</h3>
+                    <img alt="logo" src="assets/logos/vs_code.svg">
+                </div>
+                <div class="tech">
+                    <h3>Git (Github/GitLab)</h3>
+                    <img alt="logo" src="assets/logos/git.svg">
+                </div>
+            </div>
+        </div>
+        <div id="contact-page" class="contact-page">
+            <div>
+                <h3>Contact</h3>
+                <p>E-mail : brice.sabuco@edu.ece.fr</p>
+            </div>
+            <div>
+                <h3>Other</h3>
+                <p>Github
+                </p>
+            </div>
+        </div>
+        <footer>
             &copy;Copyright Brice Sabuco 2022
-        </footer> -->
+        </footer>
     </main>
 </body>
 
