--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style/landing-page.css" />
     <link rel="stylesheet" href="style/first-page.css" />
     <link rel="stylesheet" href="style/techs-page.css" />
+    <link rel="stylesheet" href="style/contact-page.css" />
     <script defer src="js/script.js"></script>
 </head>
 
@@ -106,14 +107,14 @@
             </div>
         </div>
         <div id="contact-page" class="contact-page">
-            <div>
-                <h3>Contact</h3>
-                <p>E-mail : brice.sabuco@edu.ece.fr</p>
-            </div>
-            <div>
-                <h3>Other</h3>
-                <p>Github
-                </p>
+            <div class="infos">
+                <h3>Infos</h3>
+                <div>
+                    <p>E-mail : brice.sabuco@edu.ece.fr</p>
+                </div>
+                <div>
+                    <a target="_blank" href="https://github.com/8rice">Github</a>
+                </div>
             </div>
         </div>
         <footer>
