--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="first-page">
             <img class="pinkRectBottom" alt="pinkRectBottom.svg" src="assets/pinkRectBottom.svg">
             <div class="project project-left">
-                <h3>FireCare</h3>
+                <h2>FireCare</h2>
                 <div class="project-content">
                     <img alt="offside" src="assets/offside.png">
                     <div class="project-informations">
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="project project-right">
-                <h3>OffSide</h3>
+                <h2>OffSide</h2>
                 <div class="project-content">
                     <div class="project-informations">
                         <p>OffSide is a project that was built with HTML/CSS, React.js, Node and MongoDB Atlas. It is a
@@ -64,6 +64,20 @@
                 </div>
             </div>
             <img class="blueRectSide" alt="blueRectSide.svg" src="assets/blueRectSide.svg">
+        </div>
+        <div class="second-page">
+            <div class="first-project">
+                <img alt="imgProject">
+                <p><span class="project-name">TodoBase</span></p>
+            </div>
+            <div class="second-project">
+                <img alt="imgProject">
+                <p><span class="project-name">DigitalMuseum</span></p>
+            </div>
+            <div class="third-project">
+                <img alt="imgProject">
+                <p><span class="project-name">3D Project</span></p>
+            </div>
         </div>
         <div class="techs-page">
             <h2>Commonly used</h2>
