--- a/index.html
+++ b/index.html
@@ -50,17 +50,23 @@
             <div class="project project-right">
                 <h2>OffSide</h2>
                 <div class="project-content">
-                    <div class="project-informations">
-                        <p>OffSide is a project that was built with HTML/CSS, React.js, Node and MongoDB Atlas. It is a
-                            football
-                            dashboard with 5 different widgets using an API from api-football.com
+                    <div class="project-infos">
+                        <p>
+                            <span class="project-name">FireCare</span> is an IoT project to prevent unusual gas or fire
+                            within a place. It is built with
+                            <span class="important-word">NodeRed</span> and <span class="important-word">Arduino</span>
+                            and it is using <span class="important-word">MQTT</span> for communication between the card
+                            (ESP32) and a
+                            device. A widget is displayed onto the device to see the state of the object and interact
+                            with it remotely.
                         </p>
                         <div>
-                            <div><a target="_blank" href="https://github.com/8rice/PROJECT_WEB_OCRES">Github</a></div>
-                            <div>URL</div>
+                            <img alt="" src="/assets/logos/mqtt.png" />
+                            <img alt="" src="/assets/logos/node-red.png" />
+                            <img alt="" src="/assets/logos/arduino.png" />
                         </div>
                     </div>
-                    <img alt="offside" src="assets/offside.png">
+                    <img alt="offside" src="assets/firecare-widget.png">
                 </div>
             </div>
             <img class="blueRectSide" alt="blueRectSide.svg" src="assets/blueRectSide.svg">
@@ -127,12 +133,13 @@
                     <p>E-mail : brice.sabuco@edu.ece.fr</p>
                 </div>
                 <div>
-                    <a target="_blank" href="https://github.com/8rice">Github</a>
+                    <p><a target="_blank" href="https://github.com/8rice">Github</a>
+                    </p>
                 </div>
             </div>
         </div>
         <footer>
-            &copy;Copyright Brice Sabuco 2022
+            <p>&copy; Copyright Brice Sabuco 2022</p>
         </footer>
     </main>
 </body>
