--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="landing">
             <h1 class="name">Brice Sabuco<span class="writingAnim"></span></h1>
             <p class="presentation-sentence">Student engineer, pursuing a degree in Computer Science. Passionated about
-                tech. Love to create and build.</p>
+                tech. Love to learn, create and build.</p>
             <img class="landingPink" alt="pinkRect.svg" src="assets/pinkRect.svg">
             <img class="landingBlue" alt="blueRect.svg" src="assets/blueRect.svg">
         </div>
@@ -50,7 +50,7 @@
             <div class="project project-right">
                 <h2>OffSide</h2>
                 <div class="project-content">
-                    <div class="project-infos">
+                    <div class="project-informations">
                         <p>
                             <span class="project-name">FireCare</span> is an IoT project to prevent unusual gas or fire
                             within a place. It is built with
@@ -61,9 +61,11 @@
                             with it remotely.
                         </p>
                         <div>
-                            <img alt="" src="/assets/logos/mqtt.png" />
-                            <img alt="" src="/assets/logos/node-red.png" />
-                            <img alt="" src="/assets/logos/arduino.png" />
+                            <img alt="arduino.png" src="/assets/logos/arduino.png" />
+
+                            <img alt="node-red.png" src="/assets/logos/node-red.png" />
+                            <img alt="mqtt.png" src="/assets/logos/mqtt.png" />
+
                         </div>
                     </div>
                     <img alt="offside" src="assets/firecare-widget.png">
@@ -71,7 +73,7 @@
             </div>
             <img class="blueRectSide" alt="blueRectSide.svg" src="assets/blueRectSide.svg">
         </div>
-        <div class="second-page">
+        <!-- <div class="second-page">
             <div class="first-project">
                 <img alt="imgProject">
                 <p><span class="project-name">TodoBase</span></p>
@@ -84,9 +86,9 @@
                 <img alt="imgProject">
                 <p><span class="project-name">3D Project</span></p>
             </div>
-        </div>
+        </div> -->
         <div class="techs-page">
-            <h2>Commonly used</h2>
+            <h2>Commonly used in my projects</h2>
             <div class="techs-list">
                 <div class="tech">
                     <h3>HTML5</h3>
