--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <div class="landing">
             <h1 class="name">Brice Sabuco<span class="writingAnim"></span></h1>
-            <p class="presentation-sentence">Student engineer, pursuing a degree in Computer Science. Passionated about
+            <p class="presentation-sentence">Student engineer, pursuing a degree in Computer Science. Passionate about
                 tech. Love to learn, create and build.</p>
             <img class="landingPink" alt="pinkRect.svg" src="assets/pinkRect.svg">
             <img class="landingBlue" alt="blueRect.svg" src="assets/blueRect.svg">
