--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
                     <h3>Git (Github/GitLab)</h3>
                     <img alt="logo" src="assets/logos/git.svg">
                 </div>
+                <div class="tech">
+                    <h3>Firebase</h3>
+                    <img alt="logo" src="assets/logos/firebase.svg">
+                </div>
             </div>
         </div>
         <div id="contact-page" class="contact-page">
