content second-page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet" href="style/landing-page.css" />
     <link rel="stylesheet" href="style/first-page.css" />
+    <link rel="stylesheet" href="style/second-page.css" />
     <link rel="stylesheet" href="style/techs-page.css" />
     <link rel="stylesheet" href="style/contact-page.css" />
     <script defer src="js/script.js"></script>
@@ -22,7 +23,7 @@
         <div class="landing">
             <h1 class="name">Brice Sabuco<span class="writingAnim"></span></h1>
             <p class="presentation-sentence">Student engineer, pursuing a degree in Computer Science. Passionate about
-                tech. Love to learn, create and build.</p>
+                tech. Love to learn, create and build. Here are some of my projects.</p>
             <img class="landingPink" alt="pinkRect.svg" src="assets/pinkRect.svg">
             <img class="landingBlue" alt="blueRect.svg" src="assets/blueRect.svg">
         </div>
@@ -73,20 +74,53 @@
             </div>
             <img class="blueRectSide" alt="blueRectSide.svg" src="assets/blueRectSide.svg">
         </div>
-        <!-- <div class="second-page">
+
+        <div class="second-page">
             <div class="first-project">
-                <img alt="imgProject">
-                <p><span class="project-name">TodoBase</span></p>
+                <img class="img-project" alt="imgProject" src="/assets/todo.png">
+                <p><span class="project-name">TodoBase</span> is a simple todo site that uses the <span
+                        class="important-word">noSQL</span> realtime Database from <span
+                        class="important-word">Firebase</span> to retrieve the todos of the user. It was made with <span
+                        class="important-word">Javascript</span> and <span class="important-word">HTML/CSS</span>.<a
+                        target="_blank" href="https://rebeccav1.netlify.app/"> Let's go.</a>
+                </p>
+                <div class="techs-used">
+                    <img alt="logo" src="/assets/logos/html_5.svg" />
+                    <img alt="logo" src="/assets/logos/CSS3.svg" />
+                    <img alt="logo" src="/assets/logos/js.svg" />
+                </div>
             </div>
             <div class="second-project">
-                <img alt="imgProject">
-                <p><span class="project-name">DigitalMuseum</span></p>
+                <p><span class="project-name">DigitalMuseum</span> is a website displaying art. It was made
+                    with <span class="important-word">HTML/CSS</span>
+                    and <span class="important-word">Javascript</span>. <a target="_blank"
+                        href="https://webmuseum.netlify.app/index.html">Visit here.</a>
+                </p>
+                <img class="img-project" alt="imgProject" src="/assets/digitalmuseum.png">
+                <div class="techs-used">
+                    <img alt="logo" src="/assets/logos/html_5.svg" />
+                    <img alt="logo" src="/assets/logos/CSS3.svg" />
+                    <img alt="logo" src="/assets/logos/js.svg" />
+                </div>
             </div>
             <div class="third-project">
-                <img alt="imgProject">
-                <p><span class="project-name">3D Project</span></p>
+                <img class="img-project" alt="imgProject" src="/assets/3d-project.png">
+                <p>This project is in development. It is something that I truly believe in. Bringing real life
+                    services online or connecting multiple services in one place (2D/3D world). The version in
+                    development is using a
+                    WebGL framework called <span class="important-word">Babylon.js</span> and is written in <span
+                        class="important-word">Typescript</span>. Models created with <span
+                        class="important-word">Blender</span>.
+                </p>
+                <div class="techs-used">
+                    <img alt="logo" src="/assets/logos/babylon.png" />
+                    <img alt="logo" src="/assets/logos/typescript.png" />
+                    <img alt="logo" src="/assets/logos/blender.png" />
+                </div>
             </div>
-        </div> -->
+
+        </div>
+
         <div class="techs-page">
             <h2>Commonly used in my projects</h2>
             <div class="techs-list">
@@ -139,7 +173,7 @@
                     <p>E-mail : brice.sabuco@edu.ece.fr</p>
                 </div>
                 <div>
-                    <p><a target="_blank" href="https://github.com/8rice">Github</a>
+                    <p>All code and more on <a target="_blank" href="https://github.com/8rice">Github</a>
                     </p>
                 </div>
             </div>
