--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
         </div>
 
         <div class="second-page">
-            <div class="first-project">
+            <div class="project">
                 <img class="img-project" alt="imgProject" src="/assets/todo.png">
                 <p><span class="project-name">TodoBase</span> is a simple todo site that uses the <span
                         class="important-word">noSQL</span> realtime Database from <span
                         class="important-word">Firebase</span> to retrieve the todos of the user. It was made with <span
                         class="important-word">Javascript</span> and <span class="important-word">HTML/CSS</span>.<a
-                        target="_blank" href="https://rebeccav1.netlify.app/"> Let's go.</a>
+                        target="_blank" href="https://rebeccav1.netlify.app/"> Visit here.</a>
                 </p>
                 <div class="techs-used">
                     <img alt="logo" src="/assets/logos/html_5.svg" />
@@ -90,7 +90,7 @@
                     <img alt="logo" src="/assets/logos/js.svg" />
                 </div>
             </div>
-            <div class="second-project">
+            <div class="project">
                 <p><span class="project-name">DigitalMuseum</span> is a website displaying art. It was made
                     with <span class="important-word">HTML/CSS</span>
                     and <span class="important-word">Javascript</span>. <a target="_blank"
@@ -103,7 +103,7 @@
                     <img alt="logo" src="/assets/logos/js.svg" />
                 </div>
             </div>
-            <div class="third-project">
+            <div class="project">
                 <img class="img-project" alt="imgProject" src="/assets/3d-project.png">
                 <p>This project is in development. It is something that I truly believe in. Bringing real life
                     services online or connecting multiple services in one place (2D/3D world). The version in
