techs logo offside + contact page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="project project-left">
                 <h2>FireCare</h2>
                 <div class="project-content">
-                    <img alt="offside" src="assets/offside.png">
+                    <img class="image-project" alt="offside" src="assets/offside.png">
                     <div class="project-informations">
                         <p><span class="project-name">OffSide</span> is a website that was built with <span
                                 class="important-word">HTML/CSS</span>, <span class="important-word">React.js</span>,
@@ -41,6 +41,13 @@
                             football
                             dashboard with 5 different widgets using an API from api-football.com
                         </p>
+                        <div class="techs-used">
+                            <img alt="logo" src="/assets/logos/html_5.svg">
+                            <img alt="logo" src="/assets/logos/CSS3.svg">
+                            <img alt="logo" src="/assets/logos/react.svg">
+                            <img alt="logo" src="/assets/logos/node_js.svg">
+                            <img alt="logo" src="/assets/logos/mongodb.svg">
+                        </div>
                         <div>
                             <div><a target="_blank" href="https://github.com/8rice/PROJECT_WEB_OCRES">Github</a></div>
                             <div><a target="_blank" href="https://offsidev1.netlify.app/">Website</a></div>
@@ -61,15 +68,14 @@
                             device. A widget is displayed onto the device to see the state of the object and interact
                             with it remotely.
                         </p>
-                        <div>
+                        <div class="techs-used">
                             <img alt="arduino.png" src="/assets/logos/arduino.png" />
-
                             <img alt="node-red.png" src="/assets/logos/node-red.png" />
                             <img alt="mqtt.png" src="/assets/logos/mqtt.png" />
 
                         </div>
                     </div>
-                    <img alt="offside" src="assets/firecare-widget.png">
+                    <img class="image-project" alt="offside" src="assets/firecare-widget.png">
                 </div>
             </div>
             <img class="blueRectSide" alt="blueRectSide.svg" src="assets/blueRectSide.svg">
@@ -105,7 +111,8 @@
             </div>
             <div class="project">
                 <img class="img-project" alt="imgProject" src="/assets/3d-project.png">
-                <p>This project is in development. It is something that I truly believe in. Bringing real life
+                <p>This project is in <span class="project-name">development</span>. It is something that I truly
+                    believe in. Bringing real life
                     services online or connecting multiple services in one place (2D/3D world). The version in
                     development is using a
                     WebGL framework called <span class="important-word">Babylon.js</span> and is written in <span
@@ -168,9 +175,9 @@
         </div>
         <div id="contact-page" class="contact-page">
             <div class="infos">
-                <h3>Infos</h3>
+                <h2>Infos</h2>
                 <div>
-                    <p>E-mail : brice.sabuco@edu.ece.fr</p>
+                    <p>E-mail : <span class="mail">brice.sabuco@edu.ece.fr</span></p>
                 </div>
                 <div>
                     <p>All code and more on <a target="_blank" href="https://github.com/8rice">Github</a>
