--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <div class="infos">
                 <h2>Infos</h2>
                 <div>
-                    <p>E-mail : <span class="mail">brice.sabuco@edu.ece.fr</span></p>
+                    <p>Email : <span class="mail">brice.sabuco@edu.ece.fr</span></p>
                 </div>
                 <div>
                     <p>All code and more on <a target="_blank" href="https://github.com/8rice">Github</a>
