--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/logos/favicon.ico">
     <title>Brice Sabuco Portfolio</title>
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet" href="style/landing-page.css" />
