second page title

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
             <img class="blueRectSide" alt="blueRectSide.svg" src="assets/blueRectSide.svg">
         </div>
-
+        <h2 class="title-second-page">Other projects</h2>
         <div class="second-page">
             <div class="project">
                 <img class="img-project" alt="imgProject" src="/assets/todo.png">
