firebase logo todobase

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                     <img alt="logo" src="/assets/logos/html_5.svg" />
                     <img alt="logo" src="/assets/logos/CSS3.svg" />
                     <img alt="logo" src="/assets/logos/js.svg" />
+                    <img alt="logo" src="/assets/logos/firebase.svg" />
                 </div>
             </div>
             <div class="project">
